k8s/manifests-9fd2c9/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journee-9fd2c9
  namespace: journee
  labels:
    app: journee-9fd2c9
spec:
  replicas: 3
  selector:
    matchLabels:
      app: journee-9fd2c9
  template:
    metadata:
      labels:
        app: journee-9fd2c9
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: journee-9fd2c9
          image: gcr.io/my-docker-471807/journee:9fd2c9-0b0ad2
          ports:
            - containerPort: 3000
