k8s/manifests-9fd2c9/service.yml
apiVersion: v1
kind: Service
metadata:
  name: journee-9fd2c9
  namespace: journee
spec:
  selector:
    app: journee-9fd2c9
  ports:
    - port: 80
      targetPort: 3000
